--- a/AcmeApp/android/app/src/main/res/values/strings.xml
+++ b/AcmeApp/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string moduleConfig="true" name="mobileCenterCrashes_whenToSendCrashes">ALWAYS_SEND</string>
     <string moduleConfig="true" name="mobileCenterAnalytics_whenToEnableAnalytics">ALWAYS_SEND</string>
+    <string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey"></string>
     <string name="app_name">AcmeApp</string>
 </resources>
